01_variables/02_variables_ruling.txt
When naming variables in Python, there are some important rules you should keep in mind:

    1.Variable names can only start with a letter or an underscore (_), not a number.
    2.Variable names can only contain alphanumeric characters (a-z, A-Z, 0-9) and underscores (_).
    3.Variable names are case-sensitive — age, Age, and AGE are all considered unique.
    4.Variable names cannot be one of Python's reserved keywords such as if, class, or def.


If you break any of those rules, your Python program will throw a SyntaxError:

    5variable_name = 5
     ^
SyntaxError: invalid syntax


1) First, variables names should be in lowercase, with separate words separated by an underscore. This is called snake case:
    my_variable_name = 'freeCodeCamp'

2) Next, you should use descriptive names for variables. For example, if you want to save a user's age as a variable, user_age is better than age or an abbreviation like ua:
    user_age = 30
    This way, you can easily communicate the purpose of a variable to other team members (or to your future self) in a large codebase.

3) Another convention is to avoid using single-letter variable names. This is very common in Python, but should be avoided because variable names with a single letter communicate no purpose or meaning:
    x = 56 # What do you mean by x?

4) The pound symbol (#) and the text that follows in the example above is called a comment. You might already be familiar with comments, so let's go over them quickly and explain how they work.
    In Python, comments start with a pound symbol (#), and the language ignores everything after the # symbol on that line:

    # This is a single-line comment
    Multi-line comments can be created by using consecutive single-line comments:

    # This is a
    # multi-line
    # comment